2001-06-20  Ezra Peisach  <epeisach@mit.edu>

	* login.c (read_env_vars_from_file: Only define if
	/etc/environment or /etc/timezone exists on machine.

2001-06-20  Ezra Peisach  <epeisach@mit.edu>

	* kcmd.c: Get rid of prototypes for krb5_write_message(),
	krb5_net_write(), and krb5_net_read(). They are in krb5.h now.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* krcp.c (sink): Cast argument to isdigit() to int.

2001-06-18  Ezra Peisach  <epeisach@mit.edu>

	* loginpaths.h: If _PATH_DEFPATH is defined, undefine LPATH and
	RPATH before redefining.

2001-06-11  Ezra Peisach  <epeisach@mit.edu>

	* configure.in (SETENVOBJ): If setenv is not present on system,
	define NEED_SETENV as well as linking in local sources.

	* defines.h: Include prototype for setenv() if NEED_SETENV defined.

	* krlogin.c (prf): Declare as void. Used only with one argument -
	get rid of pseudo-varargs behaviour.

	* krlogind.c (recvauth): Include k5-util.h for
	krb5_compat_recvauth_version() prototype. Declare sendoob() void.

	* krshd.c: Include k5-util.h for krb5_compat_recvauth_version()
	prototype.

	* login.c: Include setenv prototype if NEED_SETENV defined. Cast
	arguments to printf to match format string.

	* v4rcp.c (source): Cast argument to sprintf() to match format string.
	* krcp.c (rsource): Likewise.
	* forward.c (rd_and_store_for_creds): Likewise.

2001-06-11  Ezra Peisach  <epeisach@mit.edu>

	* krshd.c: Include <grp.h>, <libpty.h>, and <sys/wait.h> for
	initgroups(), pty_logwtmp()/pty_make_sane_hostname(), and wait()
	prototypes. For local initgroups definition, conditionalize on
	HAVE_INITGROUPS and not __SCO__.

	* krcp.c: Include <sys/wait.h> for wait()/waitpid() prototype.

2001-06-04  Ezra Peisach  <epeisach@mit.edu>

	* krlogin.c: Always provide prototype for setsignal and not if
	__STDC__ is defined.

2001-06-01  Ezra Peisach  <epeisach@mit.edu>

	* login.c: Add braces around initializers. Cleanup assignments in