@@ -1,3 +1,12 @@
+2001-06-21  Ezra Peisach  <epeisach@mit.edu>
+
+	* login.c: Much cleanup to reduce globals and shadowing.
+
+	* krlogind.c (main): Change sin to sock_in.
+
+	* krshd.c: Change sin to sock_in to not shadow global. Change some
+	local variables to not shadow others.
+
 2001-06-20  Ezra Peisach  <epeisach@mit.edu>
 
 	* login.c (read_env_vars_from_file: Only define if
